Add @JsonSource annotation for parameterized test